# NJEMU

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.ps2  PORTING_PLAN.md  README.md
.github/: copilot-instructions.md
.github/workflows/: computer.yml  desktop.yml  ps2.yml  psp-cmake.yml  psp.yml  wasm.yml
resources/cps1/: README.md  game_name.ini
resources/cps2/: README.md  game_name.ini
resources/mvs/: README.md  game_name.ini  rominfo.mvs  zipname.mvs  zipnamech1.mvs  zipnamech2.mvs  zipnamej.mvs
resources/ncdz/: README.md
romcnv/: CMakeLists.txt  README_CPS2.md  README_MVS.md
romcnv/src/: common.c
romcnv/src/cps2/: romcnv.c
romcnv/src/mvs/: neogeo.h  romcnv.c
src/: emucfg.h  emumain.c  emumain.h
src/common/: adhoc.c  adhoc.h  audio_driver.c  audio_driver.h  cache.c  cache.h  cmdlist.c  cmdlist.h  coin.c  coin.h  config.c  config.h  filer.c  filer.h  font_t.h  input_driver.c  input_driver.h  loadrom.c  loadrom.h  memory_sizes.h  mp3.c  mp3.h  platform_driver.c  platform_driver.h  power_driver.c  power_driver.h  sound.c  sound.h  state.c  state.h  thread_driver.c  thread_driver.h  ticker_driver.c  ticker_driver.h  ui.c  ui.h  ui_draw.c  ui_draw.h  ui_draw_driver.c  ui_draw_driver.h  (+5 more)
src/common/config/: cps.c  ncdz.c
src/common/font/: ascii_14.c  ascii_14p.c  bshadow.c  command.c  font_s.c  gbk_tbl.c  graphic.c  latin1_14.c  logo.c  volume_icon.c
src/common/icon/: cps_l.c  cps_s.c  mvs_l.c  mvs_s.c  ncdz_l.c  ncdz_s.c
src/cps1/: cps1.c  cps1.h  desktop_sprite.c  dipsw.h  driver.c  driver.h  eeprom.c  inptport.c  memintrf.c  memintrf.h  ps2_sprite.c  psp_sprite.c  sprite.h  sprite_common.c  sprite_common.h  timer.c  vidhrdw.c  vidhrdw.h
src/cps2/: cps2.c  cps2.h  desktop_sprite.c  driver.c  driver.h  eeprom.c  eeprom.h  inptport.c  inptport.h  memintrf.c  memintrf.h  ps2_sprite.c  psp_sprite.c  sprite.h  sprite_common.c  sprite_common.h  timer.c  timer.h  vidhrdw.c  vidhrdw.h
src/cpu/fame/: m68000.c
src/cpu/m68000/: c68k.c  c68k_ini.c  c68kmacro.h  m68000.c  m68000.h
src/cpu/z80/: cz80.c  cz80.h  cz80jmp.c  cz80macro.h  z80.c  z80.h
src/desktop/: desktop.h  desktop_audio.c  desktop_input.c  desktop_no_gui.c  desktop_platform.c  desktop_power.c  desktop_thread.c  desktop_ticker.c  desktop_ui_draw.c  desktop_ui_text.c  desktop_video.c  png.c
src/makefiles/: CPS1.mak  CPS2.mak  MVS.mak  NCDZ.mak
src/mvs/: biosmenu.c  biosmenu.h  desktop_sprite.c  dipsw.c  dipsw.h  driver.c  driver.h  inptport.c  inptport.h  memintrf.c  memintrf.h  mvs.c  mvs.h  neocrypt.c  pd4990a.c  ps2_sprite.c  psp_sprite.c  sprite.h  sprite_common.c  sprite_common.h  timer.c  timer.h  vidhrdw.c  vidhrdw.h  x86_64_sprite.c
src/ncdz/: cdda.c  cdda.h  cdrom.c  cdrom.h  desktop_sprite.c  driver.c  inptport.c  inptport.h  memintrf.c  memintrf.h  ncdz.c  ncdz.h  ps2_sprite.c  psp_sprite.c  sprite.h  sprite_common.c  sprite_common.h  startup.c  timer.c  timer.h  vidhrdw.c  vidhrdw.h  x86_64_sprite.c
src/ps2/: png.c  png.h  ps2_audio.c  ps2_no_gui.c  ps2_platform.c  ps2_ui_draw.c  ps2_ui_text.c  ps2_video.c
src/psp/: adhoc.c  adhoc.h  config.c  config.h  filer.c  filer.h  png.c  psp.h  psp_audio.c  psp_no_gui.c  psp_platform.c  psp_ui_draw.c  psp_ui_text.c  psp_video.c  ui.c  ui.h  ui_draw.c  ui_draw.h  ui_menu.c  ui_menu.h  wallpaper.c  wallpaper.h
src/psp/config/: mvs.c
src/psp/font/: bshadow.c  font_s.c  gbk_tbl.c  latin1_14.c  logo.c
src/psp/icon/: cps_l.c  cps_s.c  mvs_l.c  mvs_s.c  ncdz_l.c  ncdz_s.c
src/psp/menu/: cps.c
src/psp/wallpaper/: cps.c  mvs.c  ncdz.c
src/sound/: 2610intf.c  okim6295.c  qsound.c  qsound.h  sndintrf.c  sndintrf.h  ym2151.c  ym2610.c
src/x86_64/: x86_64_audio.c  x86_64_no_gui.c
src/zip/: unzip.c  zfile.c  zfile.h
web/: app.js  doc_template.html  index.html  style.css
